# Geant4-Tracker-As-Target

./: CMakeLists.txt  G4DM.cc  TTarg.in  init_vis.mac  tracker_as_target.cc  vis.mac
TTarg-Build/: CMakeCache.txt  G4History.macro  Makefile  TTarg  TTarg.in  TestOutput.root  cmake_install.cmake  notworking-env  vis.mac  workingenv
include/: G4DMActionInitialization.hh  G4DMEventAction.hh  G4DMPhysicsList.hh  G4DMPrimaryGeneratorAction.hh  G4DMRunAction.hh  G4DMSteppingAction.hh  G4DarkPhoton.hh  G4eDarkBremsstrahlung.hh  G4eDarkBremsstrahlungModel.hh  G4muDarkBremsstrahlung.hh  G4muDarkBremsstrahlungModel.hh  TTargActionInitialization.hh  TTargAnalysis.hh  TTargDetectorConstruction.hh  TTargEventAction.hh  TTargHit.hh  TTargPhysicsList.hh  TTargPrimaryGeneratorAction.hh  TTargRun.hh  TTargRunAction.hh  TTargSensitiveDetector.hh  TTargSteppingAction.hh
src/: .TTargDetectorConstruction.cc.swp  G4DMActionInitialization.cc  G4DMDetectorConstruction.cc  G4DMEventAction.cc  G4DMPhysicsList.cc  G4DMPrimaryGeneratorAction.cc  G4DMRunAction.cc  G4DMSteppingAction.cc  G4DarkPhoton.cc  G4eDarkBremsstrahlung.cc  G4eDarkBremsstrahlungModel.cc  G4muDarkBremsstrahlung.cc  G4muDarkBremsstrahlungModel.cc  TTargActionInitialization.cc  TTargDetectorConstruction.cc  TTargEventAction.cc  TTargHit.cc  TTargPhysicsList.cc  TTargPrimaryGeneratorAction.cc  TTargRun.cc  TTargRunAction.cc  TTargSensitiveDetector.cc  TTargSteppingAction.cc
